// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter lg 1`] = `
.pf-l-stack__item {
  display: block;
}
.pf-l-stack.pf-m-gutter {
  display: flex;
  flex-direction: column;
  height: 100%;
}

<Stack
  className=""
  component="div"
  gutter="lg"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`Gutter md 1`] = `
.pf-l-stack__item {
  display: block;
}
.pf-l-stack.pf-m-gutter {
  display: flex;
  flex-direction: column;
  height: 100%;
}

<Stack
  className=""
  component="div"
  gutter="md"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`Gutter sm 1`] = `
.pf-l-stack__item {
  display: block;
}
.pf-l-stack.pf-m-gutter {
  display: flex;
  flex-direction: column;
  height: 100%;
}

<Stack
  className=""
  component="div"
  gutter="sm"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`isMain defaults to false 1`] = `
.pf-l-stack__item {
  display: block;
}
.pf-l-stack {
  display: flex;
  flex-direction: column;
  height: 100%;
}

<Stack
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-stack"
  >
    <StackItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`isMain set to true 1`] = `
.pf-l-stack__item.pf-m-main {
  display: block;
}
.pf-l-stack {
  display: flex;
  flex-direction: column;
  height: 100%;
}

<Stack
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-stack"
  >
    <StackItem
      className=""
      isMain={true}
    >
      <div
        className="pf-l-stack__item pf-m-main"
      >
        Main content
      </div>
    </StackItem>
  </div>
</Stack>
`;
